loader and font

--- a/home.html
+++ b/home.html
@@ -1,31 +1,33 @@
 <!doctype>
 <html>
 <head>
-<title>Welcome To My Mixtape</title>
-<link rel="stylesheet" href="main2.css">
+  <title>Welcome To My Mixtape</title>
+  <link rel="stylesheet" href="main2.css">
+  <audio controls autoplay hidden>
+
+    <source src="ssi.mp3" type="audio/ogg">
+    <source src="ssi.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  </audio>
+</head>
+<body style="background-color:rgb(16,16,16)">
+<div id="load"></div>
 <center>
 <img src="bunny.png" width="10%">
-</center>
-<audio controls autoplay hidden>
 
-  <source src="MggIA.mp3" type="audio/ogg">
-  <source src="MIAgg.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-
-    </audio>
-<ul class="nav">
-  <li><a href="home.html" class="link">Home</a></li>
-  <li><a href="index.html" class="link">Gallery</a></li>
-</ul>
-</head>
-<body style="background-color:rgb(90,150,200)">
+  </center>
+  <ul class="nav">
+    <li><a href="home.html" class="link">Home</a></li>
+    <li><a href="index.html" class="link">Gallery</a></li>
+  </ul>
 <center>
-<h1 style="color:white">Bad Bunny Ba Ba Ba🐰🐰</h1>
+<h1 style="color:orange">X 100PRE</h1>
 
 <img src="https://thefader-res.cloudinary.com/private_images/w_760,c_limit,f_auto,q_auto:best/shirt-hot-topic-overalls-tommy-hilfiger-vintage-necklace-and-sunglasses-bad-bunny-s-own_ziwsh4/bad-bunny-overalls-style-mia-video.jpg" height=300px>
-<h2  style="color:white">About Me:</h2>
-  <p style="color:white">My name is Benito Antonio Martínez Ocasio and i'm from San Juan, Puerto Rico and i'm the king of Spanish Trap. I'm a solo singer who is featured by Mambo Kingz and DJ Luian. I started off as a SoundCloud rapper while working in the supermarket as a bagger. Around 2017 my career took off after the song "Diles" was released which caught the eye of DJ Luian.</p>
+<h1>About Me:</h1>
+  <p style="color:white">My name is Benito Antonio Martínez Ocasio and I'm from San Juan, Puerto Rico and I'm the king of Spanish Trap. I am a solo singer who is featured by Mambo Kingz and DJ Luian. I started off as a SoundCloud rapper while working in the supermarket as a bagger. Around 2017 my career took off after the song "Diles" was released which caught the eye of DJ Luian.</p>
 </center>
   <h3 style="color:white">Latest Songs:</h3>
   <ol>
@@ -46,6 +48,7 @@
         <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
             <p style="color:white">ESTAMOS BIEN-Bad Bunny 2018
-            <div><img src="badbunnygif.gif" alt="dog"></div>
+<script src="main.js"></script>
+
 </body>
 </html>
