--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="main2.css">
   <audio controls autoplay hidden>
 
-    <source src="ssi.mp3" type="audio/ogg">
-    <source src="ssi.mp3" type="audio/mpeg">
+    <source src="si.mp3" type="audio/ogg">
+    <source src="si.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
