--- a/home.html
+++ b/home.html
@@ -23,31 +23,148 @@
     <li><a href="index.html" class="link">Gallery</a></li>
   </ul>
 <center>
-<h1 style="color:orange">X 100PRE</h1>
+<h1 style="color:orange">X 100PRE Out Now</h1>
 
-<img src="https://thefader-res.cloudinary.com/private_images/w_760,c_limit,f_auto,q_auto:best/shirt-hot-topic-overalls-tommy-hilfiger-vintage-necklace-and-sunglasses-bad-bunny-s-own_ziwsh4/bad-bunny-overalls-style-mia-video.jpg" height=300px>
-<h1>About Me:</h1>
-  <p style="color:white">My name is Benito Antonio Martínez Ocasio and I'm from San Juan, Puerto Rico and I'm the king of Spanish Trap. I am a solo singer who is featured by Mambo Kingz and DJ Luian. I started off as a SoundCloud rapper while working in the supermarket as a bagger. Around 2017 my career took off after the song "Diles" was released which caught the eye of DJ Luian.</p>
+<img src="https://66.media.tumblr.com/4e05f33de5e71e3f23f1a373c5553ec9/tumblr_pl0navy5qX1xtymi2o1_1280.gif" height=300px>
 </center>
-  <h3 style="color:white">Latest Songs:</h3>
+<h1>Songs On The Album:</h1>
+<div class="grid-containerr">
+  <div class="grid-items">
+    <p style="color:white">NI BIEN NI MAL</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">200 Mph</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">¿Quien Tu Eres?</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Caro</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Tenemos Que Hablar</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Otra Noche en Miami</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Ser Bichote</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Si Estuviésemos Juntos</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Solo de Mi</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Cuando Perriabas</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">La Romana</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Como Antes</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">RLNDT</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">Estamos Bien</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+  <div class="grid-items">
+    <p style="color:white">MIA</p>
+    <li style="color:white">
+      <img src="https://media.pitchfork.com/photos/5c2cdf59673bd655963c817c/1:1/w_600/X%20100PRE_Bad%20Bunny.jpg" height=250px >
+     <audio src="MIA.mp3" controls>
+  </div>
+</div>
   <ol>
-    <p style="color:white">MIA-Bad Bunny ft. Drake 2018</p>
-    <li style="color:white"><img src="https://images.complex.com/complex/images/c_fill,g_center,w_1200/fl_lossy,pg_1,q_auto/qthjgk9bp6fjkld9bti8/bad-bunny-mia-cover" height=150px> <audio src="MIA.mp3" controls>
+    <h1 style="padding-top:1650px">Latest Songs:</h1>
+    <div class="grid-container">
+      <div class="grid-item">
+        <p style="color:white">Dame Algo- Wisin y Yandel ft. Bad Bunny 2018</p>
+        <li style="color:white">
+          <img src="https://m.media-amazon.com/images/I/81TCqYmI+2L._SS500_.jpg" height=150px >
+         <audio src="MIA.mp3" controls>
+      </div>
+      <div class="grid-item">
+        <p style="color:white">Desde El Corazon- Bad Bunny 2018</p>
+        <li style="color:white">
+          <img src="https://m.media-amazon.com/images/I/71NvVBu7aRL._SS500_.jpg" height=150px >
+         <audio src="MIA.mp3" controls>
+      </div>
+        <div class="grid-item"
+    <p style="color:white">MIA- Bad Bunny ft. Drake 2018</p>
+    <br>
+    <li style="color:white">
+      <img src="https://images.complex.com/complex/images/c_fill,g_center,w_1200/fl_lossy,pg_1,q_auto/qthjgk9bp6fjkld9bti8/bad-bunny-mia-cover" height=150px >
+     <audio src="MIA.mp3" controls>
+
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
-      <p style="color:white">MIA-Bad Bunny ft. Drake 2018</p>
+</div>
+    <div class="grid-item">
+      <p style="color:white">Esta Rico- Bad Bunny ft. Marc Anthony & Will Smith 2018</p>
       <li style="color:white"><img src="https://images-na.ssl-images-amazon.com/images/I/51Fowio4H5L._SS500.jpg" height=150px>   <audio src="Esta.mp3" controls>
       <p>If you are reading this, it is because your browser does not support the audio element.</p>
       </audio>
-        <p style="color:white">ESTA RICO-Bad Bunny ft. Marc Anthony & Will Smith 2018</p>
+  </div>
+    <div class="grid-item">
+        <p style="color:white">COMO SOY- Bad Bunny ft. Pacho & Daddy Yankee 2018</p>
         <li style="color:white"><img src="https://images-na.ssl-images-amazon.com/images/I/614vZ8F-47L._SS500.jpg" height=150px>   <audio src="Como.mp3" controls>
         <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
-          <p style="color:white">COMO SOY-Bad Bunny ft. Pacho & Daddy Yankee 2018</p>
+    </div>
+      <div class="grid-item">
+          <p style="color:white">Estamos Bien- Bad Bunny 2018</p>
           <li style="color:white"><img src="https://ssle.ulximg.com/image/750x750/cover/1530302676_965e5e883eb49d0fbf6fcea1b384292a.jpg/ae88b37d3cf113a4acb0aa2147f02c78/1530302676_3c7718f28fa8937cd187d48a1c004139.jpg" height=150px> <audio src="Estamos.mp3" controls>
         <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
-            <p style="color:white">ESTAMOS BIEN-Bad Bunny 2018
+      </div>
+      </div>
+
 <script src="main.js"></script>
 
 </body>
